k8s/aleem-testdjango-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aleem-testdjango-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: aleem-testdjango-deployment-web
  template:
    metadata:
      labels:
        component: aleem-testdjango-deployment-web
    spec:
      containers:
        - name: tesdjango-web-container
          image: aleemtmalik/testdjango:v5
          ports:
            - containerPort: 8004
