k8s/aleem-testdjango-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aleem-testdjango-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: aleem-testdjango-deployment-web
  ports:
    - port: 8004
      targetPort: 8004
