k8s/aleem-testdjango-ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aleem-testdjango-ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite: /
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: aleem-testdjango-cluster-ip-service
              servicePort: 8004
